--- a/index.html
+++ b/index.html
@@ -1,29 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Javascript Calculator</title>
-</head>
-<body>
-    <h1>Javascript Calculator</h1>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Javascript Calculator</title>
+	</head>
+	<body>
+		<h1>Javascript Calculator</h1>
 
-    <div class="calculator-container">
-        <form action="#">
-            <label for="number-box">Calculator</label> <br>
-            <input type="text" id="number-box">
-            <div class="operation-buttons">
-                <button id="addition-btn">+</button>
-                <button id="minus-btn">-</button>
-                <button id="subtraction-btn">x</button>
-                <button id="division-btn">÷</button>
-            </div>
-            <div></div>
-        </form>
-    </div>
-    <a href="https://github.com/CrypticMango" target="_blank">GitHub 💻</a>
-    <script src="app.js"></script>
-</body>
+		<div class="calculator-container">
+			<form action="#">
+				<input type="text" id="number-box" />
+				<div class="all-buttons">
+					<div class="row-1">
+						<button>C</button>
+						<button>+/-</button>
+						<button>%</button>
+						<button>÷</button>
+					</div>
+					<div class="row-2">
+						<button>7</button>
+						<button>8</button>
+						<button>9</button>
+						<button>x</button>
+					</div>
+					<div class="row-3">
+						<button>4</button>
+						<button>5</button>
+						<button>6</button>
+						<button>-</button>
+					</div>
+					<div class="row-4">
+						<button>1</button>
+						<button>2</button>
+						<button>3</button>
+						<button>+</button>
+					</div>
+					<div class="row-5">
+						<button>0</button>
+						<button>.</button>
+						<button>=</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<a href="https://github.com/CrypticMango" target="_blank"
+			>GitHub 💻</a
+		>
+		<script src="app.js"></script>
+	</body>
 </html>
