added id's to all buttons
-basic styling of buttons

--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
 				<input type="text" id="number-box" />
 				<div class="all-buttons">
 					<div class="row-1">
-						<button>C</button>
-						<button>+/-</button>
-						<button>%</button>
-						<button>÷</button>
+						<button id="clear-btn">C</button>
+						<button id="plus-minus-btn">+/-</button>
+						<button id="percentage-btn">%</button>
+						<button id="division-btn">÷</button>
 					</div>
 					<div class="row-2">
-						<button>7</button>
-						<button>8</button>
-						<button>9</button>
-						<button>x</button>
+						<button id="seven-btn">7</button>
+						<button id="eight-btn">8</button>
+						<button id="nine-btn">9</button>
+						<button id="multiplication-btn">x</button>
 					</div>
 					<div class="row-3">
-						<button>4</button>
-						<button>5</button>
-						<button>6</button>
-						<button>-</button>
+						<button id="four-btn">4</button>
+						<button id="five-btn">5</button>
+						<button id="six-btn">6</button>
+						<button id="minus-btn">-</button>
 					</div>
 					<div class="row-4">
-						<button>1</button>
-						<button>2</button>
-						<button>3</button>
-						<button>+</button>
+						<button id="one-btn">1</button>
+						<button id="two-btn">2</button>
+						<button id="three-btn">3</button>
+						<button id="addition-btn">+</button>
 					</div>
 					<div class="row-5">
-						<button>0</button>
-						<button>.</button>
-						<button>=</button>
+						<button id="zero-btn">0</button>
+						<button id="decimal-btn">.</button>
+						<button id="equals-btn">=</button>
 					</div>
 				</div>
 			</form>
