--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<button id="seven-btn">7</button>
 						<button id="eight-btn">8</button>
 						<button id="nine-btn">9</button>
-						<button id="multiplication-btn">x</button>
+						<button id="multiply-btn">x</button>
 					</div>
 					<div class="row-3">
 						<button id="four-btn">4</button>
