added link to project github page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</div>
 			</form>
 		</div>
-		<a href="https://github.com/CrypticMango" target="_blank"
+		<a href="https://github.com/CrypticMango/vanilla-javascript-calculator" target="_blank"
 			>GitHub 💻</a
 		>
 		<script src="app.js"></script>
