added type to buttons

--- a/index.html
+++ b/index.html
@@ -21,33 +21,33 @@
 				<input type="text" id="number-box" />
 				<div class="all-buttons">
 					<div class="row-1">
-						<button id="clear-btn">C</button>
-						<button id="plus-minus-btn">+/-</button>
-						<button id="percentage-btn">%</button>
-						<button id="division-btn">÷</button>
+						<button type="button" id="clear-btn">C</button>
+						<button type="button" id="plus-minus-btn">+/-</button>
+						<button type="button" id="percentage-btn">%</button>
+						<button type="button" id="division-btn">÷</button>
 					</div>
 					<div class="row-2">
-						<button id="seven-btn">7</button>
-						<button id="eight-btn">8</button>
-						<button id="nine-btn">9</button>
-						<button id="multiply-btn">x</button>
+						<button type="button" id="seven-btn">7</button>
+						<button type="button" id="eight-btn">8</button>
+						<button type="button" id="nine-btn">9</button>
+						<button type="button" id="multiply-btn">x</button>
 					</div>
 					<div class="row-3">
-						<button id="four-btn">4</button>
-						<button id="five-btn">5</button>
-						<button id="six-btn">6</button>
-						<button id="minus-btn">-</button>
+						<button type="button" id="four-btn">4</button>
+						<button type="button" id="five-btn">5</button>
+						<button type="button" id="six-btn">6</button>
+						<button type="button" id="minus-btn">-</button>
 					</div>
 					<div class="row-4">
-						<button id="one-btn">1</button>
-						<button id="two-btn">2</button>
-						<button id="three-btn">3</button>
-						<button id="addition-btn">+</button>
+						<button type="button" id="one-btn">1</button>
+						<button type="button" id="two-btn">2</button>
+						<button type="button" id="three-btn">3</button>
+						<button type="button" id="addition-btn">+</button>
 					</div>
 					<div class="row-5">
-						<button id="zero-btn">0</button>
-						<button id="decimal-btn">.</button>
-						<button id="equals-btn">=</button>
+						<button type="button" id="zero-btn">0</button>
+						<button type="button" id="decimal-btn">.</button>
+						<button type="button" id="equals-btn">=</button>
 					</div>
 				</div>
 			</form>
