--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+
+<link rel="icon" href="images/favicon.jpg" type="image/gif" sizes="32x32">
 		<title>Javascript Calculator</title>
 	</head>
 	<body>
